Wave 5c: Java idiom cleanup + ArchUnit robustness.
- Convert the request DTOs (CreateSkyRequest, UpdateSkyRequest) from Lombok
  @Data classes to records; the controller now reads request.name(). The
  generated OpenAPI schema is unchanged.
- Replace collect(Collectors.toList()) with Stream.toList() in the Keycloak
  authorities converter (widen the map to GrantedAuthority so the unmodifiable
  list still satisfies the converter's Collection<GrantedAuthority> contract).
- HexagonalArchitectureTest: fall back to walking up to settings.gradle.kts
  when project.root.dir is unset, so the rules run from an IDE; add a layered
  rule enforcing the inward-only direction app -> infrastructure -> service ->
  domain.